<resources>
    <string name="app_name">LightOn Noti</string>
    <string name="NotoficacionOn">Turn Notification On</string>
    <string name="TurnFlashOn" translatable="false">Flash</string>
    <string name="NotificatrionOff">Turn Notification Off</string>
    <string name="Notification">Notification</string>
    <string name="help" translatable="false">Click Here to find a tutorial</string>
    <string name="rolldown" translatable="false">slide down the notification bar</string>
    <string name="clickonit" translatable="false">Just click on the icon</string>
    <string name="shake" translatable="false">Shake</string>
    <string name="prenderlinterna">Click to turn on the flashlight</string>
    <string name="Selectnotification" translatable="false">Click to turn on the flashlight from  the notification bar</string>
    <string name="activaparashake">Activate to shake the phone and turn on the flashlight</string>
    <string name="menu" translatable="false">From the menu you can send me an email, share the app, rate it, and see a tutorial</string>
    <string name="emailme">Send me an Email</string>
    <string name="rateme">Rate this App</string>
    <string name="tutorial" translatable="false">Tutorial</string>
    <string name="shareapp">Share This App</string>
    <string name="dimer" translatable="false">Dimer</string>
    <string name="title_activity_dimer" translatable="false">activity_dimer</string>
    <string name="channel_name" translatable="false">MiLinternaChannel</string>
    <string name="channel_description" translatable="false">Notification Channel</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="HelpDimer" translatable="false">Para usar Dimer</string>
    <string name="permisionTitle">Permiso</string>
    <string name="permisionText">Do you want the dimmer to control the brightness of the screen?</string>

</resources>
