<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/share"
        android:checkable="false"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/shareapp"
        app:showAsAction="never" />
    <item
        android:id="@+id/rate"
        android:checkable="false"
        android:enabled="true"
        android:icon="@android:drawable/btn_star"
        android:title="@string/rateme"
        app:showAsAction="never" />
    <item
        android:id="@+id/emailme"
        android:checkable="false"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/emailme"
        app:showAsAction="never" />
    <item
        android:id="@+id/version"
        android:checkable="false"
        android:enabled="false"
        android:title="v"
        app:showAsAction="never" />
</menu>